--- a/quickstart/project-setup.mdx
+++ b/quickstart/project-setup.mdx
@@ -44,7 +44,7 @@ Before you begin, follow our guides to set up the following tools and accounts (
     </Info>
   </Step>
   <Step title="Install Dependencies">
-    Open the integrated terminal in your IDE and run:
+    Open the integrated terminal in your IDE by pressing <kbd>Ctrl</kbd>/<kbd>Cmd</kbd> + <kbd>Shift</kbd> + <kbd>`</kbd> and run:
 
     ```bash
     npm install
